# imessage-exporter

./: Cargo.toml
imessage-database/src/message_types/: music.rs  text_effects.rs
imessage-database/src/message_types/handwriting/: models.rs
imessage-database/src/tables/: chat_handle.rs
imessage-database/src/tables/messages/: body.rs
imessage-database/src/util/: dates.rs  size.rs
imessage-database/src/util/typedstream/tests/: test_parser.rs
imessage-exporter/: Cargo.toml
imessage-exporter/src/app/: error.rs  export_type.rs  options.rs  progress.rs  runtime.rs  sanitizers.rs
imessage-exporter/src/exporters/: csv.rs  database.rs  db.rs  exporter.rs  mod.rs  txt.rs
lib_db/: Cargo.toml  NOTES.md
lib_db/examples/: connect.rs  local.rs  local_rocks.rs  messages.rs  query.rs  server.rs  socket.rs  tls.rs
lib_db/src/: lib.rs  types.rs
lib_db/src/databases/: create_persons_threads.surql  http.rs  mod.rs  socket.rs  surreal.rs
lib_db/src/databases/surql/: install.surql
