[package]
name = "lib_db"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
serde = "1.0.214"
surrealdb = { version = "2.0.4", features = ["protocol-ws", "kv-rocksdb"] }
tokio = { version = "1.41.1", features = ["full"] }
dirs = "5.0"
async-trait = "0.1.83"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3   # Optimize for binary size
strip = true      # Remove debug symbols
