[package]
name = "lib_db"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
serde = "1.0.214"
surrealdb = { version = "2.1.2", features = ["protocol-ws", "kv-rocksdb"] }
tokio = { version = "1.41", features = ["full"] }
dirs = "5.0"
async-trait = "0.1.83"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json", "native-tls"] }
url = "2.5"
serde_json = "1.0"

[dev-dependencies]
axum = { version = "0.7", features = ["http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rcgen = { version = "0.13.1", features = ["pem"] }
tempfile = "3.8"
rustls = { version = "0.23", features = ["ring"] }

[features]
examples = []

